# DT8025

./: CMakeLists.txt  README.md
Assignment1/Assignment1_Part1/Assigment1P1/: Makefile  a1p1.c  a1p1.elf  a1p1.expected.img  a1p1.img
Assignment1/Assignment1_Part1/Assigment1P1/lib/: iregister.c  iregister.h  uart.c  uart.h
Assignment1/Assignment1_Part2/Assigment1Part2/: Makefile  a1p2.c  a1p2.elf  a1p2.img  a1p2_expected.img
Assignment1/Assignment1_Part2/Assigment1Part2/lib/: led.h
Assignment1_Part1/: a2p1.c  a2p1.expected.img  piface.c  piface.h  rpi-interrupts.c  rpi-interrupts.h
Assignment2/Assignment2_Part1/: Makefile  a2p1.c  a2p1.elf  a2p1.img
Assignment2/Assignment2_Part1/lib/: piface.c
Assignment2/Assignment2_Part2/Assigment2part2/: Makefile  a2p2.1.nodelay.img  a2p2.2.expected.img  a2p2.c  a2p2.elf  a2p2.img
Assignment2/Assignment2_Part2/Assigment2part2/lib/: expstruct.c  expstruct.h  piface.c
Assignment2/Assignment2_Part3/a2p3/: Makefile  a2p3.c  a2p3.cyclic.img  a2p3.elf  a2p3.expected.img  a2p3.img
Assignment2/Assignment2_Part3/a2p3/lib/: expstruct.c  led.c  led.h
Assignment3/Assignment3_Part1/a3p1/: Makefile  a3p1.c  a3p1.elf  a3p1.img
Assignment3/Assignment3_Part1/a3p1/lib/: expstruct.c  expstruct.h  led.c  led.h  piface.c  piface.h  startup.c  tinythreads.c  uart.h
Assignment3/Assignment3_Part2/: Answers.txt
Assignment3/Assignment3_Part3/a3p3/: Answers.txt  Makefile  a3p1.elf  a3p1.expected.img  a3p1.img  a3p3.c  a3p3.elf  a3p3.img
Assignment3/Assignment3_Part3/a3p3/lib/: led.c  led.h  piface.c  piface.h  rpi-interrupts-controller.c  rpi-interrupts.c  rpi-interrupts.h  tinythreads.c
Assignment4/Assignment4_Part1/a4p1/: Answers.txt  a4p1.c  a4p1.elf  a4p1.img  a4p1_with_mutex.img
Assignment4/Assignment4_Part1/a4p1/lib/: expstruct.c  led.c  led.h  piface.c  rpi-interrupts.c  syscalls.c  tinythreads.c
Assignment4/Assignment4_Part2/: Answers.txt
Assignment4/Assignment4_Part2/a4p2/: Makefile  a4p1.elf  a4p1.img  a4p1_without_mutex.img  a4p2.c  a4p2.elf  a4p2.img
Assignment4/Assignment4_Part2/a4p2/lib/: piface.c  rpi3.ld  tinythreads.c  uart.c
Assignment4/Assignment4_Part3/a4p3/: Makefile  a4p3.c  a4p3.elf  a4p3.img
Assignment4/Assignment4_Part3/a4p3/lib/: expstruct.c  expstruct.h  piface.h  rpi3.h  tinythreads.c  tinythreads.h
